tests/sksl/errors/ReservedNameInput.glsl
### Compilation failed:

error: 1: 'input' is a reserved word
int input;
    ^^^^^
1 error
